--- a/5-fieldset-legend.html
+++ b/5-fieldset-legend.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <form action="/action_page.php">
-      <fieldset>
+      <fieldset disabled>
          <legend>Personalia:</legend>
 
          <label for="fname">First name:</label>
