--- a/8-progress.html
+++ b/8-progress.html
@@ -7,5 +7,12 @@
   <body>
     <progress value="32" max="100">32%</progress>
     <progress></progress>
+    <br>
+    <label for="slider">Виберіть значення:</label>
+    <input type="range" id="slider" name="slider" min="0" max="100" value="50">
+    <output for="slider" id="output"></output>
+    <progress value="50" max="100"></progress>
+    
+
   </body>
 </html>
