--- a/1-select.html
+++ b/1-select.html
@@ -5,37 +5,44 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    <form id="my_form">
-      <select>
+    <form id="my_form" action="#">
+      <!-- <select>
         <option value="volvo">Volvo</option>
         <option value="saab">Saab</option>
-      </select>
+        <option value="saab">VW</option>
+      </select> -->
 
-      <select autofocus>
+      <!-- <select autofocus>
         <option value="saab">Saab</option>
-      </select>
+      </select> -->
 
-      <select disabled>
+      <!-- <select disabled>
         <option value="opel">Opel</option>
-      </select>
+      </select> -->
 
-      <select form="my_form">
+      <!-- <select form="my_form">
         <option value="volvo">Volvo</option>
-      </select>
+      </select> -->
 
-      <select multiple>
+      <!-- <select name="my_select">
         <option value="saab">Saab</option>
         <option value="opel">Opel</option>
         <option value="volvo">Volvo</option>
-      </select>
+      </select> -->
 
-      <select name="my_select">
+      <!-- <select multiple name="my_select">
+        <option value="saab">Saab</option>
+        <option value="opel">Opel</option>
         <option value="volvo">Volvo</option>
-      </select>
+      </select> -->
 
-      <select required>
+      <!-- <select required name="test">
+        <option disabled>Оберіть значення</option>
+        <option value="null">Не обрано</option>
         <option value="volvo">Volvo</option>
-      </select>
+        <option value="saab">Saab</option>
+        <option value="opel">Opel</option>
+      </select> -->
 
       <select size="2">
         <option value="volvo">Volvo</option>
