--- a/2-option.html
+++ b/2-option.html
@@ -9,7 +9,8 @@
       <select>
         <option value="volvo">Volvo</option>
         <option disabled value="saab">Saab</option>
-        <option selected>Opel</option>
+        <option selected value="opel">Opel</option>
+        <!-- <option value="OLD" label="TEST"></option> -->
       </select>
 
       <input type="submit" value="Submit">
