--- a/6-textarea.html
+++ b/6-textarea.html
@@ -6,27 +6,27 @@
   </head>
   <body>
     <form id="my_form">
-      <textarea autofocus>This is test value</textarea>
+      <!-- <textarea autofocus>This is test value</textarea> -->
 
-      <textarea disabled></textarea>
+      <!-- <textarea disabled></textarea> -->
 
-      <textarea form="my_form"> </textarea>
+      <!-- <textarea form="my_form"> </textarea> -->
 
-      <textarea name="my_textarea">    </textarea>
+      <!-- <textarea name="my_textarea">    </textarea> -->
 
-      <textarea cols="50"></textarea>
+      <!-- <textarea cols="50"></textarea> -->
 
-      <textarea rows="4"></textarea>
+      <!-- <textarea rows="4"></textarea> -->
 
-      <textarea readonly>Do not edit</textarea>
+      <!-- <textarea readonly>Do not edit</textarea> -->
             
-      <textarea maxlength="150"></textarea>
+      <!-- <textarea maxlength="150" minlength="50" required></textarea> -->
 
-      <textarea placeholder="input your text"></textarea>
+      <!-- <textarea placeholder="input your text"></textarea> -->
 
-      <textarea required></textarea>
+      <!-- <textarea required></textarea> -->
 
-      <textarea wrap="hard" name="wrap"></textarea>
+      <!-- <textarea wrap="hard" name="wrap"></textarea> -->
       
       <textarea spellcheck="true"></textarea>
 
