--- a/9-meter.html
+++ b/9-meter.html
@@ -1,20 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Заголовок документу</title>
-    <meta charset="utf-8" />
-  </head>
-  <body>
-    <form id="my_form">
-      <meter value="0.6">60%</meter>
-      <meter form="my_form"></meter>
-      <meter high="8"></meter>
-      <meter low="3"></meter>
-      <meter max="10"></meter>
-      <meter min="1"></meter>
-      <meter optimum="5"></meter>
 
-      <meter min="0" low="40" high="80" max="100" optimum="50" value="60"></meter>
-    </form>
-  </body>
+<head>
+  <title>Заголовок документу</title>
+  <meta charset="utf-8" />
+</head>
+
+<body>
+  <form id="my_form">
+    <meter value="0.6">60%</meter>
+    <meter form="my_form"></meter>
+    <meter high="8"></meter>
+    <meter low="3"></meter>
+    <!-- <meter max="10">7</meter>  НЕ Відображає 7, лише через value   -->
+    <!-- <meter min="1"></meter> -->
+    <!-- <meter optimum="5"></meter> -->
+    <!-- <meter value="0.3">30%</meter> -->
+
+
+    <meter min="0" max="100" low="40" high="80" optimum="35" value="90"></meter>
+
+    <br>
+
+
+    <label for="fuel">Fuel level:</label>
+    <meter id="fuel" min="0" max="100" low="33" high="66" optimum="80" value="50">
+      at 50/100
+    </meter>
+
+  </form>
+</body>
+
 </html>
